--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
 .top{
     width: 100%;
     height: 100vh;
-    background-image: url(/img/top.jpg);
+    background-image: url(img/top.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
